--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
     <body>
       Hello, world!
       <div class="alert alert-danger" role="alert">
-        Here is my alert change!
+        Here is my new change!
       </div>
      </body>
 </html>
