--- a/hello.html
+++ b/hello.html
@@ -7,9 +7,10 @@
     </head>
 
     <body>
+      <h1> Welcome to my Web site!</h1>
       Hello, world!
       <div class="alert alert-danger" role="alert">
-        Here is my new change!
+        There are my new updated changes!
       </div>
      </body>
 </html>
