--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
 
     <body>
       <h1> Welcome to my Web site!</h1>
+        <h2> Hello!</h2>
       Hello, world!
       <div class="alert alert-danger" role="alert">
         There are my new updated changes!
