--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-      <h1> Welcome to my Web site!</h1>
+      <h1> Welcome to my Web site!!</h1>
         <h2> Hello!</h2>
       Hello, world!
       <div class="alert alert-danger" role="alert">
